[gd_scene load_steps=9 format=3 uid="uid://wxcynk3p2gjl"]

[ext_resource type="Script" uid="uid://dl43yl3kcxqfo" path="res://UI/win_screen.gd" id="1_w024j"]
[ext_resource type="Theme" uid="uid://cjk4ci1au4rg7" path="res://Resources/main_theme.tres" id="2_7c84e"]
[ext_resource type="Texture2D" uid="uid://b7ebpt06cucos" path="res://UI/winscreen.png" id="2_qpj51"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oqmmh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mwi6r"]

[sub_resource type="Animation" id="Animation_w024j"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_qpj51"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oqmmh"]
_data = {
&"RESET": SubResource("Animation_qpj51"),
&"fade_in": SubResource("Animation_w024j")
}

[node name="WinScreen" type="Node2D"]
script = ExtResource("1_w024j")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -5.0
offset_top = -2.0
offset_right = 1284.0
offset_bottom = 726.0
texture = ExtResource("2_qpj51")
expand_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="TextureRect"]
layout_mode = 0
offset_left = 294.0
offset_top = 408.0
offset_right = 944.0
offset_bottom = 676.0

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/CenterContainer"]
layout_mode = 2

[node name="Play Again" type="Button" parent="TextureRect/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(175, 80)
layout_mode = 2
theme = ExtResource("2_7c84e")
theme_override_styles/focus = SubResource("StyleBoxEmpty_oqmmh")
text = "Play Again"

[node name="Control" type="Control" parent="TextureRect/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Main Menu" type="Button" parent="TextureRect/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(175, 80)
layout_mode = 2
theme = ExtResource("2_7c84e")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mwi6r")
text = "Menu"

[node name="FadeRect" type="ColorRect" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = -21.0
offset_top = -10.0
offset_right = 1311.0
offset_bottom = 745.0
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeRect"]
libraries = {
&"": SubResource("AnimationLibrary_oqmmh")
}

[connection signal="pressed" from="TextureRect/CenterContainer/HBoxContainer/Play Again" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="TextureRect/CenterContainer/HBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
